--- a/contacto.html
+++ b/contacto.html
@@ -51,19 +51,19 @@
                     <div class="contenedor-campos">
                         <div class="campo">
                             <label for="nombre">Name:</label>
-                            <input id="nombre" class="input-text" type="text" placeholder="Your name" required>
+                            <input id="nombre" class="input-text" type="text" name="Your name" required>
                         </div>
                         <div class="campo">
                             <label for="telefono">phone:</label>
-                            <input id="telefono" class="input-text" type="tel" placeholder="Your phone number">
+                            <input id="telefono" class="input-text" type="tel" name="Your phone number">
                         </div>
                         <div class="campo">
                             <label for="email">Email:</label>
-                            <input id="email" class="input-text" type="email" placeholder="Your Email" required>
+                            <input id="email" class="input-text" type="email" name="Your Email" required>
                         </div>
                         <div class="campo">
                             <label for="mensaje">Message:</label>
-                            <textarea id="mensaje" class="input-text" placeholder="Write your message" required></textarea>
+                            <textarea id="mensaje" class="input-text" name="Write your message" required></textarea>
                         </div>
                     </div> <!--contenedor-campos-->
                     <div class="alinear-derecha flex">
