--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
                     <div class="contenedor-campos">
                         <div class="campo">
                             <label for="nombre">Name:</label>
-                            <input id="nombre" class="input-text" type="text" name="Your name" required>
+                            <input id="nombre" class="input-text" type="text" name="name" required>
                         </div>
                         <div class="campo">
                             <label for="telefono">phone:</label>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="campo">
                             <label for="email">Email:</label>
-                            <input id="email" class="input-text" type="email" name="Your Email" required>
+                            <input id="email" class="input-text" type="email" name="email" placeholder="Email Address" required>
                         </div>
                         <div class="campo">
                             <label for="mensaje">Message:</label>
