--- a/contacto.html
+++ b/contacto.html
@@ -44,8 +44,7 @@
     <main class="contenedor sombra">
         <section>
             <h2>Contact</h2>
-            <form id="contactForm" class="formulario" action="https://formsubmit.co/isaacdcm09@gmail.com" method="POST">
-                <!--<button id="buttonTest">Teest</button> -->
+            <form id="contactForm" class="formulario" action="https://formsubmit.co/e6fd7c1adc7d071639f5e3540097ea9d" method="POST">
                 <fieldset>
                     <legend>Contact me </legend>
                     <div class="contenedor-campos">
@@ -55,7 +54,7 @@
                         </div>
                         <div class="campo">
                             <label for="telefono">phone:</label>
-                            <input id="telefono" class="input-text" type="tel" name="Your phone number">
+                            <input id="telefono" class="input-text" type="tel" name="phone" placeholder="optional">
                         </div>
                         <div class="campo">
                             <label for="email">Email:</label>
@@ -63,7 +62,7 @@
                         </div>
                         <div class="campo">
                             <label for="mensaje">Message:</label>
-                            <textarea id="mensaje" class="input-text" name="Write your message" required></textarea>
+                            <textarea id="mensaje" class="input-text" name="message" placeholder="Write you message " required></textarea>
                         </div>
                     </div> <!--contenedor-campos-->
                     <div class="alinear-derecha flex">
