--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="campo">
                             <label for="email">Email:</label>
-                            <input id="email" class="input-text" type="email" name="email" placeholder="Email Address" required>
+                            <input id="email" class="input-text" type="email" name="email" required>
                         </div>
                         <div class="campo">
                             <label for="mensaje">Message:</label>
