--- a/contacto.html
+++ b/contacto.html
@@ -63,6 +63,7 @@
                         <div class="campo">
                             <label for="mensaje">Message:</label>
                             <textarea id="mensaje" class="input-text" name="message" placeholder="Write you message " required></textarea>
+                            <input type="hidden" name="_captcha" value="false">
                         </div>
                     </div> <!--contenedor-campos-->
                     <div class="alinear-derecha flex">
