--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preload" href="css/style.css" as="style">
     <link href="css/style.css" rel="stylesheet">
-    <script src="./app/mensaje.js" defer></script>
+    
 </head>
 <body>
     <header>
@@ -68,11 +68,12 @@
                     </div> <!--contenedor-campos-->
                     <div class="alinear-derecha flex">
                         <button class="boton w-sm-100" type="submit" value="Enviar" id="enviar">Send</button>
+                        <input type="hidden" name="_next" value="thankyou.html">
                     </div>
                     <div>
                         <!--mensaje de envio que salga oculto en el formulario-->
                         <div id="mensaje-envio" class="alerta"></div>
-                        
+                        <input type="hidden" name="_next" value="https://sacklen09.github.io/Contact/thankyou.html">
                     </div>
                 </fieldset>
             </form>
