--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,7 @@
     />
     <link rel="preload" href="css/style.css" as="style" />
     <link href="css/style.css" rel="stylesheet" />
+    <script src="./app/mensaje.js" defer></script>
   </head>
   <body>
     <header>
